--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>portfólio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <img src="avatar-perfil.png" alt="avatar da fernanda">
+    <p>eu sou isa</p>
+    <h1>sou estudande de programação</h1>
+    <p>tenho 16 anos, estudo no colegio estadual joão marques da silveira, estou cursando o 2 ano do ensino médio no peródo integral.
+        faço o itinerario de exatas, amo biologia, robotica, matematia e programação.
+        sou uma pessoa alegre, posotiva, carinhosa, ouvinte e bondosa com as pessoas ao meu redor.
+    </p>
 </body>
 </html>
