--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="avatar-perfil.png" alt="avatar da fernanda">
+    <img src="avatar-perfil.png" alt="avatar da isadora">
     <p>eu sou isa</p>
     <h1>sou estudande de programação</h1>
     <p>tenho 16 anos, estudo no colegio estadual joão marques da silveira, estou cursando o 2 ano do ensino médio no peródo integral.
