--- a/index.html
+++ b/index.html
@@ -7,12 +7,22 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="avatar-perfil.png" alt="avatar da isadora">
-    <p>eu sou isa</p>
+    <header class="container text-center">
+    <img src="tiara-de-cabelo-princesa-bela-tiara-de-cabelo (1).jpg" alt="avatar da isadora" class="rounded-circle" width="150" height="150">
+    <p class="lead">eu sou isa</p>
     <h1>sou estudande de programação</h1>
     <p>tenho 16 anos, estudo no colegio estadual joão marques da silveira, estou cursando o 2 ano do ensino médio no peródo integral.
         faço o itinerario de exatas, amo biologia, robotica, matematia e programação.
         sou uma pessoa alegre, posotiva, carinhosa, ouvinte e bondosa com as pessoas ao meu redor.
-    </p>
+        veja os projetos que ja desenvolvi </p> 
+
+    <p>minhas habilidades</p>
+    <Dive> 
+    <p>html </p>
+    <p>css</p>
+    <p> javaScript</p>
+    <p>scratch</p>
+</Dive>
+</header>
 </body>
 </html>
